--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -8,7 +8,7 @@
     <h1>My first Webpage</h1>
     <h2>Written with a little guidance from HolaCode School</h2>
     <p>Hello, world!</p>
-    <p>Welcome to my first webpage!</p>
+    <p>Welcome to my <strong>first webpage</strong>!</p>
 
     <p>Here are som things I'm going to learn about coding</p>
     <ul>
