--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,6 +5,7 @@
     <title>My first webpage!</title>
   </head>
   <body>
+    <h2>Written with a little guidance from <em> Hola Code </em> </h2>
     <h1>My first Webpage</h1>
     <h2>Written with a little guidance from HolaCode School</h2>
     <p>Hello, world!</p>
@@ -17,5 +18,7 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+    <p> Check out <a href="http://www.connovo.org/holacode/">Hola Code</a>. It's a great place to learn web development skills! </p>
+    <img src="webpage.jpg" alt="">
   </body>
 </html>
