--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+   <body style="background-color:powderblue;">
+    <meta ch arset="utf-8">
     <title>My first webpage!</title>
-  </head>
-  <body>
-    <h2>Written with a little guidance from <em> Hola Code </em> </h2>
+      <h2>Written with a little guidance from <em> Hola Code </em> </h2>
     <h1>My first Webpage</h1>
     <h2>Written with a little guidance from HolaCode School</h2>
     <p>Hello, world!</p>
