--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,9 +4,12 @@
    <body style="background-color:powderblue;">
     <meta ch arset="utf-8">
     <title>My first webpage!</title>
-      <h2>Written with a little guidance from <em> Hola Code </em> </h2>
+    <style>
+
+    </style>
     <h1>My first Webpage</h1>
-    <h2>Written with a little guidance from HolaCode School</h2>
+    <h2>Written with a little guidance from <em> Hola Code Staff :)
+    </em> </h2>
     <p>Hello, world!</p>
     <p>Welcome to my <strong>first webpage</strong>!</p>
 
@@ -18,6 +21,8 @@
       <li>And a lot more!</li>
     </ul>
     <p> Check out <a href="http://www.connovo.org/holacode/">Hola Code</a>. It's a great place to learn web development skills! </p>
-    <img src="webpage.jpg" alt="">
+    <img src="elefante.png" alt="">
+    <img src="elefante2.png" alt="">
+    <img src="" alt="">
   </body>
 </html>
